[tool.poetry]
name = "strava-lines"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "strava_lines"}]

[tool.poetry.dependencies]
python = "3.12.7"
gpxpy = "^1.6.2"
matplotlib = "^3.10.1"
argparse = "^1.4.0"
numpy = "^2.2.4"
pandas = "^2.2.3"
ipython = "^9.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
