[tool.poetry]
name = "atlas"
version = "0.1.0"
description = ""
authors = ["Kyeong Hoon Jung <kyeong.jung@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
gpxpy = "^1.6.2"
matplotlib = "^3.10.1"
argparse = "^1.4.0"
numpy = "^2.2.4"
pandas = "^2.2.3"
ipython = "^9.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
